# mikoblog

./: .gitignore  .pre-commit-config.yaml  README.md  dataBase.db  docker-compose.yaml  dockerfile  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
docker/: init.sql
migrations/: env.py
migrations/versions/: feb9d9eade2b_init_empty_baseline.py
src/: app.py  crud.py  database.py  main.py  models.py  responses.py  schemas.py
src/api/: __init__.py  auth_controller.py  post_controller.py  user_controller.py
src/api/handlers/: exceptions.py
src/api/middleware/: rate_limit.py  request_id.py  security_headers.py
src/api/routes/: system.py
src/api/routes/v1/: __init__.py  auth.py  posts.py  users.py
src/api/utils/: cookies.py  csrf.py  request_context.py
src/core/: config.py  config_models.py  deps.py  exceptions.py  jwt.py  jwt_keys.py  logging.py
src/db/: database.py  utils.py
src/db/models/: __init__.py  post.py  refresh_token.py  user.py
src/db/repositories/: decorators.py  post_repository.py  refresh_token_repository.py  user_repository.py
src/schemas/: auth.py  posts.py  responses.py  users.py
src/services/: auth_service.py  auth_utils.py  jwt_service.py  post_service.py  user_service.py
tests/: conftest.py
tests/e2e/: test_auth_flow.py
tests/factories/: tokens.py  users.py
tests/integration/: test_auth_controller_extra.py  test_auth_login.py  test_auth_parametrized.py  test_auth_refresh_logout.py  test_auth_register.py
tests/unit/: test_auth_controller_errors.py  test_auth_service.py  test_auth_service_errors.py  test_config_errors.py  test_cookies_errors.py  test_core_deps.py  test_core_jwt.py  test_database_errors.py  test_deps_errors.py  test_jwt_errors.py  test_jwt_keys_errors.py  test_post_controller_errors.py  test_post_repository.py  test_post_service_errors.py  test_refresh_token_repository.py  test_request_context_errors.py  test_security_errors.py  test_security_negative.py  test_user_controller_errors.py  test_user_repository.py  test_user_service_errors.py  test_utils_errors.py
